update categories and css

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
         <option value="bread">Bread</option>
         <option value="vegetables">Vegetables</option>
         <option value="fruits">Fruits</option>
-        <option value="dairy">Dairy</option>
+        <option value="dairy">Dairy products</option>
       </select>
     </div>
 
@@ -70,7 +70,7 @@
           <option value="bread">Bread</option>
           <option value="vegetables">Vegetables</option>
           <option value="fruits">Fruits</option>
-          <option value="dairy">Dairy</option>
+          <option value="dairy">Dairy products</option>
         </select>
       </div>
 
@@ -145,7 +145,7 @@
 
     <div id="dairy" class="elements-container">
       <div class="title">
-        <h4>Dairy</h4>
+        <h4>Dairy products</h4>
       </div>
       <div id="dairyValue" class="countersContainer">
         <h5>Pieces: </h5>
